// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message it renders a dependency not found error 1`] = `
<div
  className="sc-ifAKCX jHZoMf"
  color="error"
>
  <div
    className="sc-EHOje iBAqQB"
  >
    <div
      className="sc-bZQynM kFeJzc"
    >
      <svg
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m21.6 21.6v-10h-3.2v10h3.2z m0 6.8v-3.4h-3.2v3.4h3.2z m-1.6-25c9.2 0 16.6 7.4 16.6 16.6s-7.4 16.6-16.6 16.6-16.6-7.4-16.6-16.6 7.4-16.6 16.6-16.6z"
          />
        </g>
      </svg>
    </div>
    <div>
      Could not find
      <b>
         
        '
        react-icons/fa/beer
        '
      </b>
      .
      <div>
        Did you add the dependency
         
        <b>
          '
          react-icons
          '
        </b>
        ?
      </div>
    </div>
  </div>
</div>
`;

exports[`Message it renders a warning 1`] = `
<div
  className="sc-ifAKCX fxFwBM"
  color={false}
>
  <div
    className="sc-EHOje iBAqQB"
  >
    <div
      className="sc-bZQynM kFeJzc"
    >
      <svg
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m21.6 23.4v-6.8h-3.2v6.8h3.2z m0 6.6v-3.4h-3.2v3.4h3.2z m-20 5l18.4-31.6 18.4 31.6h-36.8z"
          />
        </g>
      </svg>
    </div>
    <div>
      <div>
        Error in 
        <b />
        :
      </div>
      <div
        style={
          Object {
            "marginTop": "1rem",
          }
        }
      >
        Loading dependencies
        : 
      </div>
    </div>
  </div>
</div>
`;
